--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console"],
-    "WriteTo": [{ "Name": "Console" }],
-    "Enrich": ["FromLogContext", "WithExceptionDetails"],
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [ { "Name": "Console" } ],
+    "Enrich": [ "FromLogContext", "WithExceptionDetails" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -38,5 +38,6 @@
   "RedisCacheOptions": {
     "Connection": "localhost:6379,ConnectTimeout=60000,AsyncTimeout=10000,abortConnect=false"
   },
-  "SeedDummyTestPerformance": false
+  "SeedDummyTestPerformance": false,
+  "RandomThrowExceptionForTesting": true
 }
