--- a/src/PlatformExampleApp/PlatformExampleApp.Test/PlatformExampleApp.Test.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Test/PlatformExampleApp.Test.csproj
@@ -4,8 +4,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <ItemGroup>
