--- a/src/Platform/Easy.Platform.AutomationTest/Easy.Platform.AutomationTest.csproj
+++ b/src/Platform/Easy.Platform.AutomationTest/Easy.Platform.AutomationTest.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="7.0.3" />
     <PackageReference Include="Selenium.Support" Version="4.8.1" />
