--- a/src/platform-example-app.docker-compose.override.yml
+++ b/src/platform-example-app.docker-compose.override.yml
@@ -92,7 +92,7 @@ services:
       - "4001:80"
 
   chrome1:
-    image: selenium/node-chrome:4.4.0-20220831
+    image: selenium/node-chrome:111.0
     shm_size: 2gb
     depends_on:
       - selenium-hub
@@ -113,7 +113,7 @@ services:
       - "localhost:host-gateway"
     # command: bash -c "sudo chmod 777 /etc/hosts && sudo sed 's/127.0.0.1\s\{1,\}localhost/#127.0.0.1       localhost/g' /etc/hosts > /tmp/hosts-new && sudo cp /tmp/hosts-new /etc/hosts && sudo cat /etc/hosts && /opt/bin/entry_point.sh"
   chrome2:
-    image: selenium/node-chrome:4.4.0-20220831
+    image: selenium/node-chrome:111.0
     shm_size: 2gb
     depends_on:
       - selenium-hub
@@ -135,7 +135,7 @@ services:
     # command: bash -c "sudo chmod 777 /etc/hosts && sudo sed 's/127.0.0.1\s\{1,\}localhost/#127.0.0.1       localhost/g' /etc/hosts > /tmp/hosts-new && sudo cp /tmp/hosts-new /etc/hosts && sudo cat /etc/hosts && /opt/bin/entry_point.sh"
 
   edge:
-    image: selenium/node-edge:4.4.0-20220831
+    image: selenium/node-edge:111.0
     shm_size: 2gb
     depends_on:
       - selenium-hub
@@ -157,7 +157,7 @@ services:
     # command: bash -c "sudo chmod 777 /etc/hosts && sudo sed 's/127.0.0.1\s\{1,\}localhost/#127.0.0.1       localhost/g' /etc/hosts > /tmp/hosts-new && sudo cp /tmp/hosts-new /etc/hosts && sudo cat /etc/hosts && /opt/bin/entry_point.sh"
 
   firefox:
-    image: selenium/node-firefox:4.4.0-20220831
+    image: selenium/node-firefox:111.0
     shm_size: 2gb
     depends_on:
       - selenium-hub
