--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -8,7 +8,9 @@
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Warning"
+        "System": "Warning",
+        "System.Platform": "Information",
+        "Platform": "Information"
       }
     }
   },
