Refactor repository with logging slow query

--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -41,5 +41,14 @@
     "Connection": "localhost:6379,ConnectTimeout=60000,AsyncTimeout=10000,abortConnect=false"
   },
   "SeedDummyTestPerformance": false,
-  "RandomThrowExceptionForTesting": true
+  "RandomThrowExceptionForTesting": true,
+  "PersistenceConfiguration": {
+    "BadQueryWarning": {
+      "IsEnabled": true,
+      "TotalItemsThreshold": 100,
+      "SlowQueryMillisecondsThreshold": 300,
+      "SlowWriteQueryMillisecondsThreshold": 2000,
+      "IsLogWarningAsError": true
+    }
+  }
 }
