Refactor logging and new migration in background feature

--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -1,8 +1,16 @@
 {
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console"],
-    "WriteTo": [{ "Name": "Console" }],
-    "Enrich": ["FromLogContext", "WithExceptionDetails"],
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithExceptionDetails" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -10,7 +18,8 @@
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Warning",
         "Easy.Platform": "Information",
-        "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning"
+        "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
       }
     }
   },
