--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -5,8 +5,10 @@
       {
         "Name": "Console",
         "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+          "formatter": {
+            "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
+            "template": "{ {TimeStamp: @t, MessageTemplate: @mt, Message: @m, Level: @l, Exception: @x, ..@p} }\n"
+          }
         }
       }
     ],
@@ -53,7 +55,7 @@
   "RandomThrowExceptionForTesting": true,
   "PersistenceConfiguration": {
     "BadQueryWarning": {
-      "IsEnabled": true,
+      "IsEnabled": false,
       "TotalItemsThreshold": 100,
       "SlowQueryMillisecondsThreshold": 500,
       "SlowWriteQueryMillisecondsThreshold": 2000,
