--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.Development.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.Development.json
@@ -5,7 +5,7 @@
         "Name": "Console",
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] {Message:lj} {NewLine}{Exception} {NewLine}{PlatformBackgroundThreadFullStackTrace}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] {Message:lj} {NewLine}{Exception} {PlatformBackgroundThreadFullStackTrace}"
         }
       }
     ]
