--- a/src/PlatformExampleApp/PlatformExampleApp.Test.Shared/PlatformExampleApp.Test.Shared.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Test.Shared/PlatformExampleApp.Test.Shared.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Platform\Easy.Platform.AutomationTest\Easy.Platform.AutomationTest.csproj" />
   </ItemGroup>
 
