--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/PlatformExampleApp.Ids.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/PlatformExampleApp.Ids.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.3" />
+    <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
