Fix efcore serilog conflict issues

--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -56,10 +56,10 @@
   "PersistenceConfiguration": {
     "BadQueryWarning": {
       "IsEnabled": false,
-      "TotalItemsThreshold": 100,
+      "TotalItemsThreshold": 200,
       "SlowQueryMillisecondsThreshold": 500,
       "SlowWriteQueryMillisecondsThreshold": 2000,
-      "IsLogWarningAsError": true
+      "IsLogWarningAsError": false
     }
   }
 }
