--- a/src/Platform/Easy.Platform.EfCore/Easy.Platform.EfCore.csproj
+++ b/src/Platform/Easy.Platform.EfCore/Easy.Platform.EfCore.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.9" />
     <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
+    <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.54.0.64047">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
