--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -12,7 +12,7 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithExceptionDetails" ],
+    "Enrich": [ "FromLogContext" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
