--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -2,5 +2,6 @@
     "html.format.wrapLineLength": 200,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
-    "prettier.printWidth": 200
+    "prettier.printWidth": 200,
+    "dotnet.defaultSolution": "Easy.Platform.sln"
 }
