--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -21,7 +21,7 @@
         "System": "Warning",
         "Easy.Platform": "Information",
         "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning"
+        "Microsoft.EntityFrameworkCore": "Fatal"
       }
     }
   },
