--- a/src/PlatformExampleAppWeb/.eslintrc.json
+++ b/src/PlatformExampleAppWeb/.eslintrc.json
@@ -1,173 +1,132 @@
 {
-  "root": true,
-  "ignorePatterns": [
-    "**/*"
-  ],
-  "plugins": [
-    "@nrwl/nx",
-    "import",
-    "simple-import-sort",
-    "unused-imports",
-    "sonarjs",
-    "sonar",
-    "prettier"
-  ],
-  "extends": [
-    "plugin:prettier/recommended",
-    "plugin:sonar/base",
-    "plugin:sonar/recommended"
-  ],
-  "overrides": [
-    {
-      "files": [
-        "*.ts",
-        "*.scss",
-        "*.js"
-      ],
-      "rules": {
-        "prettier/prettier": [
-          "error",
-          {},
-          {
-            "usePrettierrc": true
-          }
-        ]
-      }
-    },
-    {
-      "files": [
-        "*.html"
-      ],
-      "rules": {
-        "prettier/prettier": [
-          "off",
-          {},
-          {
-            "usePrettierrc": true
-          }
-        ],
-        "sonar/destructuring-assignment-syntax": "off"
-      }
-    },
-    {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
-      "rules": {
-        "@nrwl/nx/enforce-module-boundaries": [
-          "error",
-          {
-            "enforceBuildableLibDependency": true,
-            "allow": [],
-            "depConstraints": [
-              {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": [
-                  "*"
+    "root": true,
+    "ignorePatterns": ["**/*"],
+    "plugins": ["@nrwl/nx", "import", "simple-import-sort", "unused-imports", "sonarjs", "sonar", "prettier"],
+    "extends": ["plugin:prettier/recommended", "plugin:sonar/base", "plugin:sonar/recommended"],
+    "overrides": [
+        {
+            "files": ["*.ts", "*.scss", "*.js"],
+            "rules": {
+                "prettier/prettier": [
+                    "error",
+                    {},
+                    {
+                        "usePrettierrc": true
+                    }
                 ]
-              }
-            ]
-          }
-        ],
-        // Sort and remove unused imports
-        "simple-import-sort/imports": "error",
-        "simple-import-sort/exports": "error",
-        "import/first": "error",
-        "import/newline-after-import": "error",
-        "import/no-duplicates": "error",
-        "unused-imports/no-unused-imports": "error",
-        "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-unused-vars": [
-          "error",
-          {
-            "args": "none"
-          }
-        ]
-      }
-    },
-    {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
-      "extends": [
-        "plugin:@nrwl/nx/typescript",
-        "plugin:sonarjs/recommended"
-      ],
-      "rules": {
-        "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-explicit-any": "error",
-        "@typescript-eslint/explicit-member-accessibility": [
-          "error",
-          {
-            "accessibility": "explicit",
-            "overrides": {
-              "accessors": "explicit",
-              "constructors": "off",
-              "methods": "explicit",
-              "properties": "explicit",
-              "parameterProperties": "explicit"
             }
-          }
-        ],
-        "@typescript-eslint/typedef": [
-          "error",
-          {
-            "arrayDestructuring": false,
-            "arrowParameter": false,
-            "memberVariableDeclaration": false,
-            "objectDestructuring": false,
-            "parameter": true,
-            "propertyDeclaration": true,
-            "variableDeclaration": false,
-            "variableDeclarationIgnoreFunction": true
-          }
-        ],
-        "@typescript-eslint/member-ordering": "off",
-        "sonarjs/no-duplicate-string": "off",
-        "sonarjs/no-identical-functions": "off",
-        "sonarjs/cognitive-complexity": "off",
-        "sonarjs/no-redundant-boolean": "off",
-        "sonarjs/no-nested-template-literals": "off",
-        "sonar/for-in": "off",
-        "prettier/prettier": [
-          "error",
-          {
-            "endOfLine": "auto"
-          }
-        ],
-        "sonar/function-name": [
-          "error",
-          {
-            "format": "^_?[a-zA-Z]+_?[a-zA-Z0-9]*\\$?$"
-          }
-        ]
-      }
-    },
-    {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
-      "extends": [
-        "plugin:@nrwl/nx/javascript"
-      ],
-      "rules": {}
-    },
-    {
-      "files": [
-        "*.spec.ts",
-        "*.spec.tsx",
-        "*.spec.js",
-        "*.spec.jsx"
-      ],
-      "env": {
-        "jest": true
-      },
-      "rules": {}
-    }
-  ]
+        },
+        {
+            "files": ["*.html"],
+            "rules": {
+                "prettier/prettier": [
+                    "off",
+                    {},
+                    {
+                        "usePrettierrc": true
+                    }
+                ],
+                "sonar/destructuring-assignment-syntax": "off"
+            }
+        },
+        {
+            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+            "rules": {
+                "@nrwl/nx/enforce-module-boundaries": [
+                    "error",
+                    {
+                        "enforceBuildableLibDependency": true,
+                        "allow": [],
+                        "depConstraints": [
+                            {
+                                "sourceTag": "*",
+                                "onlyDependOnLibsWithTags": ["*"]
+                            }
+                        ]
+                    }
+                ],
+                // Sort and remove unused imports
+                "simple-import-sort/imports": "error",
+                "simple-import-sort/exports": "error",
+                "import/first": "error",
+                "import/newline-after-import": "error",
+                "import/no-duplicates": "error",
+                "unused-imports/no-unused-imports": "error",
+                "@typescript-eslint/no-inferrable-types": "off",
+                "@typescript-eslint/no-unused-vars": [
+                    "error",
+                    {
+                        "args": "none"
+                    }
+                ]
+            }
+        },
+        {
+            "files": ["*.ts", "*.tsx"],
+            "extends": ["plugin:@nrwl/nx/typescript", "plugin:sonarjs/recommended"],
+            "rules": {
+                "@typescript-eslint/no-empty-function": "off",
+                "@typescript-eslint/no-inferrable-types": "off",
+                "@typescript-eslint/no-explicit-any": "error",
+                "@typescript-eslint/explicit-member-accessibility": [
+                    "error",
+                    {
+                        "accessibility": "explicit",
+                        "overrides": {
+                            "accessors": "explicit",
+                            "constructors": "off",
+                            "methods": "explicit",
+                            "properties": "explicit",
+                            "parameterProperties": "explicit"
+                        }
+                    }
+                ],
+                "@typescript-eslint/typedef": [
+                    "error",
+                    {
+                        "arrayDestructuring": false,
+                        "arrowParameter": false,
+                        "memberVariableDeclaration": false,
+                        "objectDestructuring": false,
+                        "parameter": true,
+                        "propertyDeclaration": true,
+                        "variableDeclaration": false,
+                        "variableDeclarationIgnoreFunction": true
+                    }
+                ],
+                "@typescript-eslint/member-ordering": "off",
+                "sonarjs/no-duplicate-string": "off",
+                "sonarjs/no-identical-functions": "off",
+                "sonarjs/cognitive-complexity": "off",
+                "sonarjs/no-redundant-boolean": "off",
+                "sonarjs/no-nested-template-literals": "off",
+                "sonarjs/prefer-immediate-return": "off",
+                "sonar/for-in": "off",
+                "prettier/prettier": [
+                    "error",
+                    {
+                        "endOfLine": "auto"
+                    }
+                ],
+                "sonar/function-name": [
+                    "error",
+                    {
+                        "format": "^_?[a-zA-Z]+_?[a-zA-Z0-9]*\\$?$"
+                    }
+                ]
+            }
+        },
+        {
+            "files": ["*.js", "*.jsx"],
+            "extends": ["plugin:@nrwl/nx/javascript"],
+            "rules": {}
+        },
+        {
+            "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
+            "env": {
+                "jest": true
+            },
+            "rules": {}
+        }
+    ]
 }
