--- a/src/PlatformExampleAppWeb/package.json
+++ b/src/PlatformExampleAppWeb/package.json
@@ -1,96 +1,97 @@
 {
-  "name": "platform-example-web",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
-    "start": "nx serve",
-    "build": "nx lint apps-domains-text-snippet-domain && nx lint platform-core && nx lint playground-text-snippet && nx build playground-text-snippet",
-    "dev-start:playground-text-snippet": "nx serve playground-text-snippet -c development --port=4001",
-    "test": "nx test"
-  },
-  "private": true,
-  "engines": {
-    "node": ">=14.17.3"
-  },
-  "dependencies": {
-    "@angular/animations": "15.0.4",
-    "@angular/cdk": "15.0.3",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
-    "@angular/material": "~15.0.3",
-    "@angular/material-moment-adapter": "~15.0.3",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/pwa": "~15.0.4",
-    "@angular/router": "15.0.4",
-    "@angular/service-worker": "15.0.4",
-    "@ng-select/ng-select": "~10.0.1",
-    "@ngneat/hot-toast": "4.1.0",
-    "@ngneat/overview": "3.0.0",
-    "@ngrx/component-store": "15.0.0",
-    "@ngx-translate/core": "14.0.0",
-    "@ngx-translate/http-loader": "7.0.0",
-    "angular-oauth2-oidc": "13.0.1",
-    "bootstrap": "5.2.3",
-    "font-awesome": "4.7.0",
-    "highcharts": "10.2.1",
-    "highcharts-angular": "3.0.0",
-    "lodash-es": "4.17.21",
-    "moment": "2.29.4",
-    "ngx-toastr": "16.0.1",
-    "rxjs": "7.5.0",
-    "tslib": "2.3.0",
-    "type-fest": "~3.3.0",
-    "zone.js": "0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "15.0.4",
-    "@angular/language-service": "15.0.4",
-    "@nrwl/angular": "15.3.3",
-    "@nrwl/cli": "15.3.3",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/nx-cloud": "~15.0.2",
-    "@nrwl/workspace": "15.3.3",
-    "@types/jest": "28.1.1",
-    "@types/lodash-es": "4.17.6",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-cypress": "2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint-plugin-sonar": "~0.10.0",
-    "eslint-plugin-sonarjs": "^0.18.0",
-    "eslint-plugin-unused-imports": "2.0.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
-    "js-beautify": "1.14.6",
-    "ng-packagr": "~15.0.3",
-    "nx": "15.3.3",
-    "postcss": "8.4.6",
-    "postcss-import": "~14.1.0",
-    "postcss-preset-env": "~7.5.0",
-    "postcss-url": "~10.1.3",
-    "posthtml": "0.16.6",
-    "posthtml-attrs-sorter": "1.1.0",
-    "prettier": "2.6.2",
-    "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.4"
-  }
+    "name": "platform-example-web",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "nx",
+        "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
+        "start": "nx serve",
+        "build": "nx lint apps-domains-text-snippet-domain && nx lint platform-core && nx lint playground-text-snippet && nx build playground-text-snippet",
+        "dev-start:playground-text-snippet": "nx serve playground-text-snippet -c development --port=4001",
+        "test": "nx test"
+    },
+    "private": true,
+    "engines": {
+        "node": ">=14.17.3"
+    },
+    "dependencies": {
+        "@angular/animations": "15.0.4",
+        "@angular/cdk": "15.0.3",
+        "@angular/common": "15.0.4",
+        "@angular/compiler": "15.0.4",
+        "@angular/core": "15.0.4",
+        "@angular/forms": "15.0.4",
+        "@angular/material": "~15.0.3",
+        "@angular/material-moment-adapter": "~15.0.3",
+        "@angular/platform-browser": "15.0.4",
+        "@angular/platform-browser-dynamic": "15.0.4",
+        "@angular/pwa": "~15.0.4",
+        "@angular/router": "15.0.4",
+        "@angular/service-worker": "15.0.4",
+        "@ng-select/ng-select": "~10.0.1",
+        "@ngneat/hot-toast": "4.1.0",
+        "@ngneat/overview": "3.0.0",
+        "@ngrx/component-store": "15.0.0",
+        "@ngx-translate/core": "14.0.0",
+        "@ngx-translate/http-loader": "7.0.0",
+        "angular-oauth2-oidc": "13.0.1",
+        "bootstrap": "5.2.3",
+        "font-awesome": "4.7.0",
+        "highcharts": "10.2.1",
+        "highcharts-angular": "3.0.0",
+        "lodash-es": "4.17.21",
+        "moment": "2.29.4",
+        "ngx-toastr": "16.0.1",
+        "rxjs": "7.5.0",
+        "tslib": "2.3.0",
+        "type-fest": "~3.3.0",
+        "zone.js": "0.11.4",
+        "moment-timezone": "0.5.43"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "15.0.4",
+        "@angular-eslint/eslint-plugin": "15.0.0",
+        "@angular-eslint/eslint-plugin-template": "15.0.0",
+        "@angular-eslint/template-parser": "15.0.0",
+        "@angular/cli": "~15.0.0",
+        "@angular/compiler-cli": "15.0.4",
+        "@angular/language-service": "15.0.4",
+        "@nrwl/angular": "15.3.3",
+        "@nrwl/cli": "15.3.3",
+        "@nrwl/eslint-plugin-nx": "15.3.3",
+        "@nrwl/jest": "15.3.3",
+        "@nrwl/linter": "15.3.3",
+        "@nrwl/nx-cloud": "~15.0.2",
+        "@nrwl/workspace": "15.3.3",
+        "@types/jest": "28.1.1",
+        "@types/lodash-es": "4.17.6",
+        "@types/node": "16.11.7",
+        "@typescript-eslint/eslint-plugin": "5.36.1",
+        "@typescript-eslint/parser": "5.36.1",
+        "eslint": "~8.15.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-cypress": "2.10.3",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-simple-import-sort": "8.0.0",
+        "eslint-plugin-sonar": "~0.10.0",
+        "eslint-plugin-sonarjs": "^0.18.0",
+        "eslint-plugin-unused-imports": "2.0.0",
+        "jest": "28.1.1",
+        "jest-environment-jsdom": "28.1.1",
+        "jest-preset-angular": "12.2.3",
+        "js-beautify": "1.14.6",
+        "ng-packagr": "~15.0.3",
+        "nx": "15.3.3",
+        "postcss": "8.4.6",
+        "postcss-import": "~14.1.0",
+        "postcss-preset-env": "~7.5.0",
+        "postcss-url": "~10.1.3",
+        "posthtml": "0.16.6",
+        "posthtml-attrs-sorter": "1.1.0",
+        "prettier": "2.6.2",
+        "ts-jest": "28.0.5",
+        "ts-node": "10.9.1",
+        "typescript": "4.8.4"
+    }
 }
