--- a/src/PlatformExampleAppWeb/libs/platform-core/tsconfig.json
+++ b/src/PlatformExampleAppWeb/libs/platform-core/tsconfig.json
@@ -29,9 +29,7 @@
         "strictInputAccessModifiers": true,
         "strictTemplates": true,
         "extendedDiagnostics": {
-            "checks": {
-                "optionalChainNotNullable": "error"
-            }
+            "defaultCategory": "error"
         }
     }
 }
