--- a/src/Platform/Easy.Platform/Easy.Platform.csproj
+++ b/src/Platform/Easy.Platform/Easy.Platform.csproj
@@ -45,6 +45,7 @@
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="TimeZoneConverter" Version="6.1.0" />
     <PackageReference Include="Pyroscope" Version="0.8.14" /> <!--Package used to enhance the performance analysis and optimization of .NET applications-->
+    <PackageReference Include="Ulid" Version="1.3.3" />
   </ItemGroup>
 
 </Project>
