platform performance and resilient improvement

--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -21,7 +21,7 @@
         "System": "Warning",
         "Easy.Platform": "Information",
         "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning"
+        "Microsoft.EntityFrameworkCore": "Fatal"
       }
     }
   },
@@ -49,7 +49,7 @@
     "LogProcessTime": true
   },
   "RedisCacheOptions": {
-    "Connection": "localhost:6379,ConnectTimeout=60000,AsyncTimeout=10000,abortConnect=false"
+    "Connection": "localhost:6379,ConnectTimeout=60000,AsyncTimeout=60000,abortConnect=false"
   },
   "SeedDummyTestPerformance": false,
   "RandomThrowExceptionForTesting": true,
