--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -21,7 +21,8 @@
         "System": "Warning",
         "Easy.Platform": "Information",
         "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning",
-        "Microsoft.EntityFrameworkCore": "Fatal"
+        "Easy.Platform.Infrastructures.BackgroundJob": "Warning",
+        "Microsoft.EntityFrameworkCore": "Error"
       }
     }
   },
